Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Feb-2011 Mark Dexter
# Fix failing system tests for "published" language change, 404 error change, Save & Close ACL modal change

26-Jan-2011 Mark Dexter
# Fix failing system test

11-Jan-2011 Mark Dexter
# Fix problems with acl0001Test

10-Jan-2011 Mark Dexter
# Fix failing system tests

07-Jan-2011 Mark Dexter
# Fix failing system test

02-Jan-2011 Christophe Demko
 # Correcting unit test since commit #20076

03-Jan-2011 Mark Dexter
# Fix problem with unit tests with mysqli driver

02-Jan-2011 Mark Dexter
# Fixed failing system tests
# Fixed failing JUserHelperTest

02-Jan-2011 Christophe Demko
 + Added test for 3rd parameter to JRegistry::loadFile

17-Dec-2010 Ian MacLennan
 + Added test for JToolbar::addButtonPath

14-Dec-2010 Mark Dexter
# Check that menu item type displays when editing a menu item

14-Dec-2010 Christophe Demko
 # Add firstDay metadata in unit tests

11-Dec-2010 Christophe Demko
 # [#22648] function isCompatible incorrectly checks current version (Mark Dexter)

08-Dec-2010 Mark Dexter
# Fix failing sample_data0001Test.php 
^ Add option to doInstall.php to set hathor as default admin template

06-Dec-2010 Christophe Demko
 # Test coverage for the JArrayHelper::fromObject method

04-Dec-2010 Christophe Demko
 # Test coverage for automatic generated field name

30-Nov-2010 Mark Dexter
# Fix failing JStringTest and JArrayHelperTest due to locale settings
# Skip some string sort tests if MAC OS

27-Nov-2010 Mark Dexter
# Improved test coverage for JUserTest

17-Nov-2010 Mark Dexter
# Fix doInstall to allow selection of different database types
^ Added two methods to JFolderTest (Christophe Demoko) as part of [#22484]

15-Nov-2010 Mark Dexter