@@ -63,16 +63,16 @@ class ControlPanel0001 extends SeleniumJoomlaTestCase
 		$this->assertTrue($this->isElementPresent("link=Clients"));
 		$this->assertTrue($this->isElementPresent("link=Categories"));
 		$this->assertTrue($this->isElementPresent("link=Contacts"));
-		$this->assertTrue($this->isElementPresent("//ul[@id='menu-contacts']/li[1]/a"));
-		$this->assertTrue($this->isElementPresent("//ul[@id='menu-contacts']/li[2]/a"));
+		$this->assertTrue($this->isElementPresent("//ul[@id='menu-com-contact']/li[1]/a"));
+		$this->assertTrue($this->isElementPresent("//ul[@id='menu-com-contact']/li[2]/a"));
 		$this->assertTrue($this->isElementPresent("link=Newsfeeds"));
 		$this->assertTrue($this->isElementPresent("link=Feeds"));
-		$this->assertTrue($this->isElementPresent("//ul[@id='menu-newsfeeds']/li[2]/a"));
+		$this->assertTrue($this->isElementPresent("//ul[@id='menu-com-newsfeeds']/li[2]/a"));
 		$this->assertTrue($this->isElementPresent("link=Redirect"));
 		$this->assertTrue($this->isElementPresent("link=Search"));
 		$this->assertTrue($this->isElementPresent("link=Weblinks"));
 		$this->assertTrue($this->isElementPresent("link=Links"));
-		$this->assertTrue($this->isElementPresent("//ul[@id='menu-weblinks']/li[2]/a"));
+		$this->assertTrue($this->isElementPresent("//ul[@id='menu-com-weblinks']/li[2]/a"));
 		echo "Check that Extensions menu options are visible\n";
 		$this->assertTrue($this->isElementPresent("link=Extension Manager"));
 		$this->assertTrue($this->isElementPresent("link=Module Manager"));
